--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,7 +14,10 @@
     <a href="/about">About</a>
     <a href="/blog">Blog</a>
 
-		<h1>Astro</h1>
-    <h1>My Astro Site</h1>
+    <h1>About Me</h1>
+    <h2>... and my new Astro site!</h2>
+
+    <p>I am working through Astro's introductory tutroial.</p>
+    <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
 	</body>
 </html>
