--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -14,7 +14,6 @@
     <a href="/about">About</a>
     <a href="/blog">Blog</a>
 
-		<h1>Astro</h1>
-    <h1>My Astro Site</h1>
+    <h1>My Blog</h1>
 	</body>
 </html>
